--- a/src/scss/_author.scss
+++ b/src/scss/_author.scss
@@ -138,7 +138,6 @@ nav li {
     width: 25%;
     height: calc(100vh - 120px);
     background: #2b2227;
-    // background: black;
     margin: 0px;
     padding: 30px;
     position: absolute;
@@ -146,16 +145,17 @@ nav li {
     left: 30px;
     overflow-y: scroll;
     color: white;
-    // border-radius: 10px;
-    // border: solid 1px white;
 
-    // &::-webkit-scrollbar-button{ display: none; height: 10px; border-radius: 5px; }
-    // &::-webkit-scrollbar-button:hover{ background-color: #AAA; } 
+    &::-webkit-scrollbar-button{ display: none; height: 10px; border-radius: 5px; }
+    &::-webkit-scrollbar-button:hover{ background-color: #AAA; } 
     &::-webkit-scrollbar-thumb{ background-color: rgba(white, 0.7); width: 5px; border-radius: 5px; margin: 5px;}
     &::-webkit-scrollbar-thumb:hover{ background-color: white; }
-    // &::-webkit-scrollbar-track{ background-color: rgba(black, 0.5); width: 20px;}
+    &::-webkit-scrollbar-track{ background-color: rgba(black, 0.5); width: 20px;}
     &::-webkit-scrollbar-track:hover{ background-color: rgba(black, 0.3); } 
     &::-webkit-scrollbar{ width: 7px;}
+
+    scrollbar-color: white transparent;
+    scrollbar-width: thin;
 
     h1 {
         margin: 0 0 24px 0;
