--- a/src/scss/_author.scss
+++ b/src/scss/_author.scss
@@ -20,6 +20,8 @@ h1 {
     padding: 0;
 }
 
+nav {display: inline-block}
+
 nav ul {
     display: flex;
     list-style: none;
@@ -30,6 +32,14 @@ nav ul {
 
 nav li {
     margin-right: 30px;
+}
+
+#gf-feedback {
+    background: yellow;
+    height: 100%;
+    border: 0;
+    padding: 20px;
+    cursor: pointer;
 }
 
 #stage {
@@ -73,10 +83,23 @@ nav li {
 
 }
 
+#surveyStage {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    iframe {
+        width: 640px;
+        border: 0;
+        padding: 30px 0;
+    }
+
+}
+
 .fullStage {
     position: absolute;
     display: block;
-    background: black;
+    background: rgba(black, 0.95);
     width: 100%;
     height: 100%;
     top: 0;
@@ -135,7 +158,7 @@ nav li {
 }
 
 .content {
-    width: 25%;
+    width: 28%;
     height: calc(100vh - 120px);
     background: #2b2227;
     margin: 0px;
