--- a/src/scss/_author.scss
+++ b/src/scss/_author.scss
@@ -99,10 +99,14 @@ nav li {
 .fullStage {
     position: absolute;
     display: block;
-    background: rgba(black, 0.95);
-    width: 100%;
-    height: 100%;
-    top: 0;
+    background-color: rgba(black, 0.9);
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: calc(100vw - 28% - 60px);
+    height: calc(100vh - 120px);
+    top: 90px;
+    left: calc(28% + 30px);
     overflow: hidden;
 
     iframe {
@@ -122,26 +126,31 @@ nav li {
     img {
         max-width: 100%;
         max-height: 100%;
+        // margin-top: -50%;
     }
 
+    // figcaption {
+    //     display: none;
+    //     position: absolute;
+    //     bottom: 0;
+    //     padding: 1rem;
+    //     margin: 40px;
+    //     background: rgba(black, 0.8);
+    //     color: white;
+    //     max-width: 50%;
+    //     text-align:  left;
+    // }
+
     figcaption {
-        display: block;
-        position: absolute;
-        bottom: 0;
-        padding: 1rem;
-        margin: 40px;
-        background: rgba(black, 0.8);
-        color: white;
-        max-width: 50%;
-        text-align:  left;
+        display: none;
     }
 
     .close {
         position: absolute;
         width: 60px;
         height: 60px;
-        top: 30px;
-        right: 30px;
+        top: 0px;
+        right: 0px;
         border: 0;
         background: red;
         color: white;
