--- a/src/scss/_author.scss
+++ b/src/scss/_author.scss
@@ -87,11 +87,15 @@ nav li {
     display: flex;
     align-items: center;
     justify-content: center;
+    
+
+    &.open {
+        padding: 17px;
+    }
 
     iframe {
         width: 640px;
         border: 0;
-        padding: 30px 0;
     }
 
 }
@@ -99,15 +103,22 @@ nav li {
 .fullStage {
     position: absolute;
     display: block;
-    background-color: rgba(black, 0.9);
+    // background-color: rgba(black, 0.9);
+    background-color: black;
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
-    width: calc(100vw - 28% - 60px);
+    
     height: calc(100vh - 120px);
     top: 90px;
     left: calc(28% + 30px);
     overflow: hidden;
+    width: 0;
+    transition: all 250ms ease-in-out;
+
+    &.open {
+        width: calc(100vw - 28% - 60px);
+    }
 
     iframe {
         width: 100%;
