--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -15,12 +15,37 @@
     box-sizing: border-box;
 }
 
-   html {
-    color: #222;
+html {
+    
+    /* Load system fonts */
+    font-family: -apple-system, BlinkMacSystemFont, San Francisco, Roboto, Segoe UI, Helvetica Neue, sans-serif;
+
+    /* Make type rendering look crisper */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+
+    /* Disable auto-enlargement of small text in Safari */
+    text-size-adjust: 100%;
+
+    /* Enable kerning and optional ligatures */
+    text-rendering: optimizeLegibility;
+
     font-size: 16px;
     line-height: 1.5;
-    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
+
 }
+
+/**
+ * Form elements render using OS defaults,
+ * so font-family inheritance must be specifically declared
+ */
+ button,
+ input,
+ optgroup,
+ select,
+ textarea {
+   font-family: inherit;
+ }
 
 /*
  * Remove text-shadow in selection highlight:
