Removed npm packages and added plyr

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,6 +5,7 @@
 @import "variables";
 @import "normalize";
 // @import "toast";
+@import "/node_modules/plyr/dist/plyr.css";
 @import "base";
 @import "helper";
 @import "author";
