--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,7 +5,7 @@
 @import "variables";
 @import "normalize";
 // @import "toast";
-@import "/node_modules/plyr/dist/plyr.css";
+@import "./../../node_modules/plyr/src/sass/plyr";
 @import "base";
 @import "helper";
 @import "author";
