--- a/src/scss/_author.scss
+++ b/src/scss/_author.scss
@@ -89,14 +89,18 @@ nav li {
     display: flex;
     align-items: center;
     justify-content: center;
-    
+    background-color: #ecf0f1;
 
     &.open {
-        padding: 17px;
+        // padding: 17px;
+        padding: 2rem;
+        max-width: calc(640px + 4rem);
     }
 
     iframe {
-        width: 640px;
+        // width: 640px;
+        // width: calc(100% - 100px);
+        width: 100%;
         border: 0;
     }
 
@@ -105,7 +109,6 @@ nav li {
 .fullStage {
     position: absolute;
     display: block;
-    // background-color: rgba(black, 0.9);
     background-color: black;
     background-size: contain;
     background-position: center;
@@ -186,7 +189,7 @@ nav li {
 }
 
 .content {
-    width: 28%;
+    max-width: 28%;
     height: calc(100vh - 120px);
     background: #2b2227;
     margin: 0px;
@@ -197,13 +200,13 @@ nav li {
     overflow-y: scroll;
     color: white;
 
-    &::-webkit-scrollbar-button{ display: none; height: 10px; border-radius: 5px; }
-    &::-webkit-scrollbar-button:hover{ background-color: #AAA; } 
-    &::-webkit-scrollbar-thumb{ background-color: rgba(white, 0.7); width: 5px; border-radius: 5px; margin: 5px;}
-    &::-webkit-scrollbar-thumb:hover{ background-color: white; }
-    &::-webkit-scrollbar-track{ background-color: rgba(black, 0.5); width: 20px;}
-    &::-webkit-scrollbar-track:hover{ background-color: rgba(black, 0.3); } 
-    &::-webkit-scrollbar{ width: 7px;}
+    &::-webkit-scrollbar-button { display: none; height: 10px; border-radius: 5px; }
+    &::-webkit-scrollbar-button:hover { background-color: #AAA; } 
+    &::-webkit-scrollbar-thumb { background-color: rgba(white, 0.7); width: 5px; border-radius: 5px; margin: 5px;}
+    &::-webkit-scrollbar-thumb:hover { background-color: white; }
+    &::-webkit-scrollbar-track { background-color: rgba(black, 0.5); width: 20px;}
+    &::-webkit-scrollbar-track:hover { background-color: rgba(black, 0.3); } 
+    &::-webkit-scrollbar { width: 7px; }
 
     scrollbar-color: white transparent;
     scrollbar-width: thin;
