--- a/src/scss/_author.scss
+++ b/src/scss/_author.scss
@@ -190,6 +190,7 @@ nav li {
 
 .content {
     max-width: 28%;
+    width: 100%;
     height: calc(100vh - 120px);
     background: #2b2227;
     margin: 0px;
