--- a/src/scss/_media.scss
+++ b/src/scss/_media.scss
@@ -4,12 +4,94 @@
    Modify as content requires.
    ========================================================================== */
 
-@media only screen and (min-width: 35em) {
-    /* Style adjustments for viewports that meet the condition */
-}
+// @media only screen and (min-width: 35em) {
+//   /* Style adjustments for viewports that meet the condition */
+// }
 
-@media (-webkit-min-device-pixel-ratio: 1.25),
-       (min-resolution: 1.25dppx),
-       (min-resolution: 120dpi) {
-    /* Style adjustments for high resolution devices */
+// @media print,
+//   (-webkit-min-device-pixel-ratio: 1.25),
+//   (min-resolution: 1.25dppx),
+//   (min-resolution: 120dpi) {
+//   /* Style adjustments for high resolution devices */
+// }
+
+/* ==========================================================================
+   Print styles.
+   Inlined to avoid the additional HTTP request:
+   https://www.phpied.com/delay-loading-your-print-css/
+   ========================================================================== */
+
+// @media print {
+//   *,
+//   *:before,
+//   *:after {
+//     background: transparent !important;
+//     color: $black !important;
+//     /* Black prints faster */
+//     -webkit-box-shadow: none !important;
+//     box-shadow: none !important;
+//     text-shadow: none !important;
+//   }
+//   a,
+//   a:visited {
+//     text-decoration: underline;
+//   }
+//   a[href]:after {
+//     content: " (" attr(href) ")";
+//   }
+//   abbr[title]:after {
+//     content: " (" attr(title) ")";
+//   }
+//   /*
+//      * Don't show links that are fragment identifiers,
+//      * or use the `javascript:` pseudo protocol
+//      */
+//   a[href^="#"]:after,
+//   a[href^="javascript:"]:after {
+//     content: "";
+//   }
+//   pre {
+//     white-space: pre-wrap !important;
+//   }
+//   pre,
+//   blockquote {
+//     border: 1px solid #999;
+//     page-break-inside: avoid;
+//   }
+//   /*
+//      * Printing Tables:
+//      * https://web.archive.org/web/20180815150934/http://css-discuss.incutio.com/wiki/Printing_Tables
+//      */
+//   thead {
+//     display: table-header-group;
+//   }
+//   tr,
+//   img {
+//     page-break-inside: avoid;
+//   }
+//   p,
+//   h2,
+//   h3 {
+//     orphans: 3;
+//     widows: 3;
+//   }
+//   h2,
+//   h3 {
+//     page-break-after: avoid;
+//   }
+// }
+
+@mixin respond-to($media) {
+  @if $media == phones {
+    @media only screen and (max-width: $break-small) { @content; }
+  }
+  @else if $media == tablets {
+    @media only screen and (min-width: $break-small + 1) and (max-width: $break-large - 1) { @content; }
+  }
+  @else if $media == desktop {
+    @media only screen and (min-width: $break-large) { @content; }
+  }
+  @else if $media == xldesktop {
+    @media only screen and (min-width: $break-xlarge) { @content; }
+  }
 }
