--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,7 +1,39 @@
 /* ==========================================================================
-
-Global site variables
-
+Site Variables
 ========================================================================== */
 
-$selection-color: #b3d4fc;
+$base: 16px;
+$font-primary: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
+$font-secondary: 'Poppins', $font-primary;
+$margin: 3rem;
+$margin-small: $margin / 2;
+$radius: 1rem;
+$radius-small: $radius / 2;
+$padding: $margin;
+$padding-small: $margin-small;
+
+// Colours
+
+// $blue: #dd3b67;
+// $blue: #2980b9;
+// $blue: #3498db;
+$white: #fff;
+$black: #2b2227;
+$yellow: #ffff00;
+$gray-light: #ecf0f1;
+$gray-dark: #bdc3c7;
+$orange: #F8BA00;
+$green: #00D967;
+$red: #EE5A24;
+$hotpink: #dd3b67;
+$pink: #F78FB3;
+$blue: #5352ED;
+$lavender: #FF9FF3;
+
+// Config Vars
+
+$theme: $blue;
+$selection: $yellow;
+$break-small: 480px;
+$break-large: 1025px;
+$break-xlarge: 1600px;
