--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -45,7 +45,7 @@ main {
 }
 
 .stage {
-	background: $white;
+	// background: $white;
 	width: 100%;
 	height: 100%;
 	position: absolute;
@@ -56,7 +56,11 @@ main {
 
 }
 
-
+canvas {
+	@extend .shadow;
+	@extend .rounded;
+	padding: 0;
+}
 
 .inner {
 	width: 100%;
