--- a/src/scss/_helper.scss
+++ b/src/scss/_helper.scss
@@ -118,3 +118,8 @@ nav.rounded-small {
 	transform: scale(0.8);
 	box-shadow: none;
 }
+
+.dark {
+	color: $white;
+	text-shadow: 0 0 0.25rem rgba($black, 1);
+}
