Finished pavilion slides

--- a/src/scss/_helper.scss
+++ b/src/scss/_helper.scss
@@ -121,5 +121,5 @@ nav.rounded-small {
 
 .dark {
 	color: $white;
-	text-shadow: 0 0 0.25rem rgba($black, 1);
+	h2 { text-shadow: 0 0 0.25rem rgba($black, 1); }
 }
