--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -346,7 +346,10 @@ footer {
 		margin: -$margin;
 		background-repeat: no-repeat;
 		background-size: cover;
+		background-position: center;
 	}
+
+	.slide-desc * { transition: none; }
 
 	@include respond-to(phones) {
 
@@ -376,17 +379,11 @@ footer {
 		blockquote { display: none; }
 	}
 
+	small { margin-bottom: $margin-small/2; }
+
 }
 
 #close { z-index: 150; }
-
-// #dummy {
-// 	position: absolute;
-// 	left: 0;
-// 	top: 10rem;
-// 	margin: 0;
-// 	padding: 1rem;
-// }
 
 .logos {
 	
