--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -127,7 +127,7 @@ canvas {
 
 	position: absolute;
 	right: $margin;
-	top: $margin;
+	top: $margin * 1.25;
 	color: $white;
 	text-align: center;
 
