--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -20,7 +20,7 @@ html {
 
 }
 
-body { font-size: 0.875rem; } 
+body { font-size: 0.875rem; @include respond-to(phones) { font-size: 1rem; } } 
 
 h1, h2, h3, h4 {
 	font-family: $font-secondary;
