--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -28,17 +28,16 @@ h1, h2, h3, h4 {
 	line-height: 1.35;
 }
 
-h2 { line-height: 1; }
-
-p, h1, h2, h3, h4 {
-	margin: 0 0 $margin-small 0;
-}
+p, h1, h2, h3, h4 {	margin: 0 0 $margin-small 0; }
 
 h1 { font-size: 1.5rem; margin: 0; }
+
 h2 { 
-	font-size: 3rem;
+	font-size: 2.9rem;
+	line-height: 1; 
 	@include respond-to(phones) { font-size: 1.5rem; line-height: 1.35;}
 }
+
 h3 { font-size: 2.25rem; }
 h4 { font-size: 1.125rem; margin: 0;}
 
