Added model title

--- a/src/scss/_helper.scss
+++ b/src/scss/_helper.scss
@@ -77,7 +77,7 @@ Helper classes
 
 .clearfix:after { clear: both; }
 
-.shadow { box-shadow: 0 0 30px rgba($black, 0.35); }
+.shadow { box-shadow: 0 0 2rem rgba($black, 0.35); }
 
 .margin-bottom { margin-bottom: $margin-small !important; }
 
