--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -145,7 +145,7 @@ canvas {
 	transform: translateX(-50%);
 	color: $white;
 	text-shadow: 0 0 1rem rgba($black, 1);
-
+	font-size: 1.6875rem;
 }
 
 #change {
