--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -362,6 +362,7 @@ footer {
 
 	.slide-desc * { transition: none; }
 	.mobile-desc { display: none; }
+	.mobile-img { display: none; }
 
 	@include respond-to(phones) {
 
@@ -375,14 +376,14 @@ footer {
 			margin: -$margin-small;
 		}
 
-		.bg {
-			width: 100%;
-			height: 100vw;
-			margin: 0;
-			padding: 0;
+		.bg { display: none; }
+		.slide-desc { display: none; }
+		
+		.mobile-img {
+			display: block;
+			max-width: 100%;
 		}
 
-		.slide-desc { display: none; }
 		.mobile-desc {
 			display: block;
 			padding: $padding;
