--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -165,7 +165,7 @@ canvas {
 	width: 25%;
 	background: rgba($black, 0.7);
 
-	@include respond-to(tablets) { left: $margin-small; bottom: $margin-small; }
+	@include respond-to(tablets) { left: $margin-small; bottom: $margin-small; width: 33%;}
 	@include respond-to(phones) { display: none; }
 
 }
